# pkbot

./: Cargo.toml  README.md  Rocket.toml
src/: api.rs  config.rs  error.rs  exchange.rs  interpretor.rs  main.rs  prelude.rs  reactor.rs  store.rs
src/api/: cors.rs  market.rs
src/api/market/: data.rs
src/exchange/: kraken.rs
src/interpretor/: aggregator.rs  ast.rs  lexer.rs
src/reactor/: runtime.rs  sync.rs  utils.rs
src/reactor/runtime/: builtin.rs
src/reactor/runtime/builtin/: cat.rs  echo.rs  ls.rs  sleep.rs
src/store/: market.rs
src/ui/: events.rs
